# crypto-neutral-bot

./: .backtest_empty_funding.csv  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  REPO_ID.txt  STATUS.md  base_backup.txt  memo.txt  mypy.ini  ops-check.csv  ops-check.json  pyproject.toml  requirements-ci.txt  ruff.toml  tmp_live_runner_snapshot.txt  tmp_segment.txt
.github/workflows/: audit.yml  ci.yml
bot/: __init__.py
bot/analytics/: __init__.py  trip_aggregator.py
bot/app/: __init__.py  export_db.py  live_runner.py  paper_runner.py  show_config.py  smoke.py  smoke_core.py
bot/backtest/: __init__.py  costs.py  replay.py
bot/config/: __init__.py  loader.py  models.py  models_utf8.tmp
bot/core/: __init__.py  errors.py  logging.py  retry.py  time.py  types.py
bot/cost/: __init__.py  model.py
bot/data/: __init__.py  repo.py  repo_noop.py  schema.py
bot/exchanges/: __init__.py  base.py  bitget.py  bybit.py  gateway_if.py  types.py
bot/monitor/: __init__.py  metrics.py  report.py
bot/oms/: __init__.py  engine.py  fill_sim.py  types.py
bot/ops/: check.py
bot/risk/: __init__.py  guards.py  limits.py
bot/strategy/: __init__.py
bot/strategy/funding_basis/: __init__.py  engine.py  models.py
bot/tools/: __init__.py  jsonl_sink.py  progress_logger.py
config/: app.mainnet.example.yaml  app.mainnet.yaml  app.yaml  symbols.csv
docs/: bitget_migration.md  progress.md  spec_mvp.md
scripts/: bitget_top_perp.py  bitget_ws_rest_check.py  fix_time_and_opscheck.ps1  fix_time_and_opscheck.ps1.bak  quick_open_test.py  start_mainnet.ps1  start_mainnet.sh  start_testnet.ps1
tests/: conftest.py  test_bybit_gateway.py  test_config.py  test_config_loader.py  test_core_utils.py  test_sanity.py  test_smoke.py
tests/app/: test_live_runner_bitget_mapping.py
tests/backtest/: BTCUSDT_USDTFUTURES_4H_3y_ohlcv_bitget.csv  BTCUSDT_funding_3y_bitget.csv  ETHUSDT_USDTFUTURES_4H_3y_ohlcv_bitget.csv  ETHUSDT_funding_3y_bitget.csv  SOLUSDT_USDTFUTURES_4H_3y_ohlcv_bitget.csv  SOLUSDT_funding_3y_bitget.csv  backtest_config.yaml  download_bitget_funding.py  download_bitget_ohlcv_mix.py  funding_feed.csv  plot_backtest.py  prepare_bitget_backtest.py  prices_feed.csv  test_replay.py
tests/core/: test_logging.py  test_retry.py  test_time.py
tests/data/: test_repo.py
tests/monitor/: test_metrics.py  test_report.py
tests/oms/: test_oms_engine.py
tests/risk/: test_risk_guards.py
tests/strategy/: test_funding_basis_strategy.py
tools/: audit.json  audit.ps1
