[project]
name = "crypto-neutral-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Yoshi",email = "yoshiyoshi@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2] (>=0.28.1,<0.29.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "pydantic (>=2.12.0,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "polars (>=1.34.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "ccxt (>=4.5.8,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
ruff = "^0.14.0"
black = "^25.9.0"
mypy = "^1.18.2"
pre-commit = "^4.3.0"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry]
name = "crypto-neutral-bot"
version = "0.1.0"
description = ""
authors = []
package-mode = false   # ← これを追加
