[tool.poetry]
name = "crypto-neutral-bot"
version = "0.1.0"
description = ""
authors = []
packages = [{ include = "bot" }]  # プロダクトのPythonパッケージは 'bot' ディレクトリ配下にあることを宣言

[tool.poetry.dependencies]
python = "^3.11"
httpx = { extras = ["http2"], version = "^0.27.0" }  # RESTクライアント（HTTP/2対応）
websockets = "^12.0"                                 # WebSocketクライアント
pydantic = "^2.7.0"                                  # 型付きデータモデル
pydantic-settings = "^2.4.0"                         # .env/YAML等から設定読取
loguru = "^0.7.2"                                    # ロギング
tenacity = "^8.3.0"                                  # 再試行（指数バックオフ）
sqlalchemy = "^2.0.30"                               # ORM/スキーマ
aiosqlite = "^0.20.0"                                # 非同期SQLiteドライバ
pandas = "^2.2.2"                                    # 分析・集計（最小限）
polars = "^1.6.0"                                    # 高速データフレーム（任意利用）
python-dotenv = "^1.0.1"                             # .env ロード補助
ccxt = "^4.3.0"                                      # 取引所RESTラッパ（Bybit代替手段）
pybit = "*"                                          # TODO: v5対応版の正式パッケージ名・バージョンは要確認
pyyaml = "^6.0.2"                                    # YAML 読み込み用ライブラリ

[tool.poetry.group.dev.dependencies]  # これは何をする設定？→ 旧dev-dependenciesを新フォーマットへ移行する
pytest = "^8.2.1"            # テスト実行
pytest-asyncio = "^0.23.7"   # 非同期テスト
ruff = "^0.5.7"              # Linter（高速）
black = "^24.8.0"            # フォーマッタ
mypy = "^1.10.0"             # 型検査
pre-commit = "^3.7.1"        # コミット時の自動チェック

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["db/**"]            # 生成物等は除外可

[tool.ruff.lint]
select = ["E", "F", "I", "B"]  # 基本のエラー/フォーマット/インポート順/バグベア

[tool.mypy]  # これは何をする設定？→ mypyの基本設定
python_version = "3.11"
warn_unused_ignores = true
# tests配下はモックやスタブで厳密型付けが難しいため、型チェックから除外する
exclude = ["^tests/"]
